Some updates in the documentation

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -61,9 +61,9 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in _build/qthelp, like this:"
-	@echo "# qcollectiongenerator _build/qthelp/Eventlet.qhcp"
+	@echo "# qcollectiongenerator _build/qthelp/Evy.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile _build/qthelp/Eventlet.qhc"
+	@echo "# assistant -collectionFile _build/qthelp/Evy.qhc"
 
 latex:
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) _build/latex
