--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
+
 recursive-include tests *.py *.crt *.key
 recursive-include doc *.rst *.txt *.py Makefile *.png
 recursive-include examples *.py *.html
+recursive-include libuv *
+
 include MANIFEST.in NEWS AUTHORS LICENSE README
