Remove all the CFFI interface: it was not working on Pypy, so it is better just to use on PyUV and forget about low-level problems... Now code is much cleaner...

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py25,py26,py27
+envlist = py27
 
 [testenv]
 deps = nose
@@ -8,35 +8,3 @@ commands =
          nosetests --with-doctest evy/coros.py evy/event.py \
              evy/pool.py evy/pools.py evy/proc.py \
              evy/queue.py evy/timeout.py
-
-[testenv:py25selects]
-basepython = python2.5
-setenv = EVENTLET_HUB = selects
-
-[testenv:py25poll]
-basepython = python2.5
-setenv = EVENTLET_HUB = poll
-
-[testenv:py26selects]
-basepython = python2.6
-setenv = EVENTLET_HUB = selects
-
-[testenv:py26poll]
-basepython = python2.6
-setenv = EVENTLET_HUB = poll
-
-[testenv:py26epolls]
-basepython = python2.6
-setenv = EVENTLET_HUB = epolls
-
-[testenv:py27selects]
-basepython = python2.7
-setenv = EVENTLET_HUB = selects
-
-[testenv:py27poll]
-basepython = python2.7
-setenv = EVENTLET_HUB = poll
-
-[testenv:py27epolls]
-basepython = python2.7
-setenv = EVENTLET_HUB = epolls
