Set the tests to run

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27
 [testenv]
 deps = nose
 commands =
-         nosetests tests/
-         nosetests --with-doctest evy/coros.py evy/event.py \
-             evy/pool.py evy/pools.py evy/proc.py \
-             evy/queue.py evy/timeout.py
+         nosetests -v -a '!perf' -w tests
+#         nosetests --with-doctest evy/coros.py evy/event.py \
+#             evy/pool.py evy/pools.py evy/proc.py \
+#             evy/queue.py evy/timeout.py
