--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
+##
+## see http://about.travis-ci.org/docs/user/languages/python/
+##
+
 language: python
 python:
   - "2.7"
+
 # command to install dependencies
 install:
   - "pip install . --use-mirrors"
   - "pip install -r requirements.txt --use-mirrors"
+
 # command to run tests
 script: nosetests -v -a '!perf' -w tests
+
