Use "make test" for running tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,4 @@ install:
   - "pip install -r requirements.txt --use-mirrors"
 
 # command to run tests
-script: nosetests -v -a '!perf' -w tests
-
+script: make test
